intro.5: More verbose introductory sentence
Explain a little about everything is a file,
matching the style of earlier intro pages.

PR:		248562
MFC after:	3 days
Approved by:	mhorne (mentor)
Reviewed by:	imp, mhorne, Lexi Winter <lexi@le-fay.org>
Pull Request:	https://github.com/freebsd/freebsd-src/pull/1534

--- a/share/man/man5/intro.5
+++ b/share/man/man5/intro.5
@@ -35,7 +35,10 @@
 .Nm intro
 .Nd introduction to file formats
 .Sh DESCRIPTION
-This section contains information about file formats, including:
+This section contains information about the file formats
+which comprise most data structures in the
+.Bx
+environment, including:
 .Pp
 .Bl -bullet -compact
 .It
