--- a/share/man/man7/simd.7
+++ b/share/man/man7/simd.7
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE
 .
-.Dd August 26, 2024
+.Dd November 18, 2024
 .Dt SIMD 7
 .Os
 .Sh NAME
@@ -86,8 +86,8 @@ Enhanced functions are present for the following architectures:
 .It    strsep            Ta    S       Ta        Ta    S2
 .It    strspn            Ta    S       Ta        Ta    S2
 .It    swab              Ta            Ta        Ta           Ta    S
-.It    timingsafe_bcmp   Ta            Ta        Ta    S1
-.It    timingsafe_memcmp Ta            Ta        Ta    S
+.It    timingsafe_bcmp   Ta    A       Ta        Ta    S1
+.It    timingsafe_memcmp Ta    S       Ta        Ta    S
 .It    wcschr            Ta            Ta        Ta           Ta    S
 .It    wcscmp            Ta            Ta        Ta           Ta    S
 .It    wcslen            Ta            Ta        Ta           Ta    S
