cxgbe: Tidy TOE tunables under hw.cxgbe
- Only two of these tunables are used for RATELIMIT without
  TCP_OFFLOAD.

- Mark t4_tmr_idx_ofld and t4_pktc_idx_ofld static.

- Move hw.cxgbe.cop_managed_offloading under hw.cxgbe.toe since it is
  specific to TOE.

Reviewed by:	np
Sponsored by:	Chelsio Communications
Differential Revision:	https://reviews.freebsd.org/D47765

(cherry picked from commit 90652188232458891a2922fb5a542971aa58055d)

--- a/usr.sbin/cxgbetool/cxgbetool.8
+++ b/usr.sbin/cxgbetool/cxgbetool.8
@@ -29,7 +29,7 @@
 .\"
 .\" * Other names and brands may be claimed as the property of others.
 .\"
-.Dd April 14, 2022
+.Dd December 10, 2024
 .Dt CXGBETOOL 8
 .Os
 .Sh NAME
@@ -553,7 +553,7 @@ Install the Connection Offload Policy (COP) in
 A COP offers fine-grained control over which connections get offloaded and with
 what parameters.
 Set
-.Cm hw.cxgbe.cop_managed_offloading="1"
+.Cm hw.cxgbe.toe.cop_managed_offloading="1"
 in loader.conf to ensure that t4_tom will not offload any connection before a
 COP is installed.
 Note that t4_tom must be loaded and operational (IFCAP_TOE enabled) as always
