cxgbetool.8: Consistently use .Cm for loader tunables
Sponsored by:	Chelsio Communications

(cherry picked from commit 34fbc9e421e7fbb382a644d8d289311455681734)

--- a/usr.sbin/cxgbetool/cxgbetool.8
+++ b/usr.sbin/cxgbetool/cxgbetool.8
@@ -531,7 +531,9 @@ List all filters programmed into the hardware.
 Install the firmware configuration file contained in
 .Ar fw-config.txt
 to the card.
-Set hw.cxgbe.config_file="flash" in loader.conf to get
+Set
+.Cm hw.cxgbe.config_file="flash"
+in loader.conf to get
 .Xr cxgbe 4
 to use the on-flash configuration.
 .It Cm loadcfg Cm clear
