sed: The change ("c") command should start a new cycle.
The "c" command should start the next cycle as clarified in POSIX 2024.
This is also consistent with historical and gnu sed behavior.

This patch is from OpenBSD by way of NetBSD with a tweak to the man page
date by me.

Confirmed the test case in the bug now works.

PR:		271817
Obtained from:	NetBSD (1.39 uwe), OpenBSD (1.39 millert)
Sponsored by:	Netflix

(cherry picked from commit a2d78713171cf138b5ae50d61f82df1af7574c95)

--- a/usr.bin/sed/sed.1
+++ b/usr.bin/sed/sed.1
@@ -30,7 +30,7 @@
 .\"
 .\"	@(#)sed.1	8.2 (Berkeley) 12/30/93
 .\"
-.Dd April 8, 2021
+.Dd December 17, 2024
 .Dt SED 1
 .Os
 .Sh NAME
@@ -374,7 +374,7 @@ If the label is not specified, branch to the end of the script.
 .Pp
 .It [2addr]c\e
 .It text
-Delete the pattern space.
+Delete the pattern space and start the next cycle.
 With 0 or 1 address or at the end of a 2-address range,
 .Em text
 is written to the standard output.
