shar: add a note about the port to the deprecation warning
cy@ was kind enough to preemptively create a port from the version of
this script in base for those that need this exact interface; add a
pointer to it so that interested individuals could start installing it
sooner rather than later.

Noted by:	cy
MFC after:	3 days

--- a/usr.bin/shar/shar.1
+++ b/usr.bin/shar/shar.1
@@ -43,6 +43,11 @@ they can easily be trojan-horsed and pose a significant security risk to users.
 The
 .Xr tar 1
 utility can still produce shar encodings of files if needed.
+The
+.Pa sysutils/freebsd-shar
+port has been created to maintain this version of
+.Nm
+past its deprecation in base.
 .Sh SYNOPSIS
 .Nm
 .Ar
