--- a/bin/timeout/timeout.1
+++ b/bin/timeout/timeout.1
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd December 28, 2024
+.Dd January 4, 2025
 .Dt TIMEOUT 1
 .Os
 .Sh NAME
@@ -34,7 +34,7 @@
 .Nm
 .Op Fl k Ar time | Fl -kill-after Ar time
 .Op Fl s Ar sig | Fl -signal Ar sig
-.Op Fl -kill-after Ar time | Fl k Ar time
+.Op Fl v | Fl -verbose
 .Op Fl -foreground
 .Op Fl -preserve-status
 .Ar duration
@@ -76,6 +76,8 @@ Specify the signal to send on timeout.
 By default,
 .Dv SIGTERM
 is sent.
+.It Fl v , Fl -verbose
+Show information to stderr about any signal sent on timeout.
 .It Fl -foreground
 Do not propagate timeout to the children of
 .Ar command .
