ls -lh: humanize the total
Before this change, the total printed on the first line was always in
blocks.

Now the long format with -h will print the "humanized number" instead.

`ls -sh` never provided sizes in anything other than blocks, total or
individual, and this commit doesn't change that.

The total number of blocks is a sum of fts_statp->st_blocks, so it's
multiplied by 512 and not by blocksize.

$ ls -lh /usr/bin | head -n 2
total 442 MB
-r-xr-xr-x 1 root wheel 70B Dec 20 21:06 CC

Differential Revision:	https://reviews.freebsd.org/D48329

--- a/bin/ls/ls.1
+++ b/bin/ls/ls.1
@@ -539,6 +539,10 @@ which are listed as the directory's contents
 and
 .Pa ..
 and other files which start with a dot, depending on other options).
+If the
+.Fl h
+option is given,
+the total size is displayed as the number of bytes.
 .Pp
 The default block size is 512 bytes.
 The block size may be set with option
