--- a/share/man/man9/cdefs.9
+++ b/share/man/man9/cdefs.9
@@ -401,7 +401,8 @@ are also included.
 These macros are set by
 .Nm
 to control the visibility of different standards.
-Users should not use these, but they are documented here for developers.
+Users must not define these, and doing so will produced undefined results.
+They are documented here for developers working on system's header files.
 .Bl -column "---------------"
 .It Dv __XSI_VISIBLE Ta Restricts the visibility of XOPEN Single Unix Standard version.
 Possible values are 500, 600, 700 or 800, corresponding to Issue 5, 6, 7, or 8
