--- a/usr.bin/bintrans/bintrans.1
+++ b/usr.bin/bintrans/bintrans.1
@@ -236,6 +236,8 @@ Decode.
 Output to
 .Ar output_file
 instead of standard output.
+.It fl r
+Encode/Decode in RFC2047 specific variant.
 .El
 .Sh EXAMPLES
 The following example packages up a source tree, compresses it,
