--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -27,7 +27,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd January 7, 2025
+.Dd January 9, 2025
 .Dt PF.CONF 5
 .Os
 .Sh NAME
@@ -265,7 +265,8 @@ firewall at the risk of dropping valid idle connections.
 .It Ar tcp.first
 The state after the first packet.
 .It Ar tcp.opening
-The state before the destination host ever sends a packet.
+The state after the second packet but before both endpoints have
+acknowledged the connection.
 .It Ar tcp.established
 The fully established state.
 .It Ar tcp.closing
