--- a/usr.bin/genl/genl.1
+++ b/usr.bin/genl/genl.1
@@ -56,7 +56,7 @@ Id of the available multicast group if any and it associated name
 Connect to the
 .Ar family
 protocol and subscribe to the
-.Ar mulicast group
+.Ar multicast group
 then print the received messages in a readable format if the protocol is known.
 So far only
 .Qq nlctrl
@@ -64,7 +64,7 @@ and
 .Qq nlsysevent
 are known. If no
 .Ar multicast group
-are provided then all the groups are subsribed to.
+are provided then all the groups are subscribed to.
 .El
 .Sh SEE ALSO
 .Xr genetlink 4 ,
