genl: formatting fix

--- a/usr.bin/genl/genl.1
+++ b/usr.bin/genl/genl.1
@@ -63,7 +63,8 @@ So far only
 .Qq nlctrl
 and
 .Qq nlsysevent
-are known. If no
+are known.
+If no
 .Ar multicast group
 are provided then all the groups are subscribed to.
 .El
