munmap.2: Remove EINVAL for negative len
len is unsigned (it is size_t), so cannot be negative.

Sponsored by:	The FreeBSD Foundation

--- a/lib/libsys/munmap.2
+++ b/lib/libsys/munmap.2
@@ -55,7 +55,7 @@ will fail if:
 .It Bq Er EINVAL
 The
 .Fa len
-argument was zero or negative, or
+argument was zero, or
 some part of the region being unmapped is outside the
 valid address range for a process.
 .El
