--- a/bin/kill/kill.1
+++ b/bin/kill/kill.1
@@ -81,6 +81,9 @@ of the default
 .Pp
 The following PIDs have special meanings:
 .Bl -tag -width indent
+.It 0
+The signal is sent to all processes whose group ID is equal to the process
+group ID of the sender, and for which the process has permission.
 .It -1
 If superuser, broadcast the signal to all processes; otherwise broadcast
 to all processes belonging to the user.
