kill.1: mention special meaning of PGID as a PID
PR:	 284158

(cherry picked from commit d6c2d4fe975c70975bdc6bec76d044408f6dcb8c)

--- a/bin/kill/kill.1
+++ b/bin/kill/kill.1
@@ -87,6 +87,9 @@ group ID of the sender, and for which the process has permission.
 .It -1
 If superuser, broadcast the signal to all processes; otherwise broadcast
 to all processes belonging to the user.
+.It - Ns Ar PGID
+The signal is sent to all processes that belong to the specified
+process group ID (PGID).
 .El
 .Pp
 Some of the more commonly used signals:
