Deprecate publickey(5) stuff
This uses DES and it's likely that nobody uses that in 2025.
If somebody uses this we help them by deprecating and removing this.

Reviewed by:	bapt, emaste
Differential Revision:	https://reviews.freebsd.org/D30682

--- a/usr.bin/newkey/newkey.8
+++ b/usr.bin/newkey/newkey.8
@@ -52,6 +52,11 @@ password of the given username.
 .Xr keylogin 1 ,
 .Xr publickey 5 ,
 .Xr keyserv 8
+.Sh HISTORY
+The
+.Nm
+utility was removed from
+.Fx 15.0 .
 .Sh NOTES
 The Network Information Service
 .Pq NIS
