--- a/usr.bin/keylogin/keylogin.1
+++ b/usr.bin/keylogin/keylogin.1
@@ -30,3 +30,8 @@ to be used by any secure network services, such as NFS.
 .Xr publickey 5 ,
 .Xr keyserv 8 ,
 .Xr newkey 8
+.Sh HISTORY
+The
+.Nm
+utility was removed from
+.Fx 15.0 .
