Deprecate publickey(5) stuff
This uses DES and it's likely that nobody uses that in 2025.
If somebody uses this we help them by deprecating and removing this.

Reviewed by:	bapt, emaste
Differential Revision:	https://reviews.freebsd.org/D30682

(cherry picked from commit 723425f837270dd3b22098168ae9464a1ebe38c6)

--- a/usr.bin/keylogout/keylogout.1
+++ b/usr.bin/keylogout/keylogout.1
@@ -43,3 +43,8 @@ This will break secure NFS if it is done on a server.
 .Xr publickey 5 ,
 .Xr keyserv 8 ,
 .Xr newkey 8
+.Sh HISTORY
+The
+.Nm
+utility was removed from
+.Fx 15.0 .
