--- a/usr.sbin/keyserv/keyserv.8
+++ b/usr.sbin/keyserv/keyserv.8
@@ -81,3 +81,8 @@ Display status of DES support (enabled/disabled).
 .Xr keylogin 1 ,
 .Xr keylogout 1 ,
 .Xr publickey 5
+.Sh HISTORY
+The
+.Nm
+utility was removed from
+.Fx 15.0 .
