sysctl: Fix usage() and SYNOPSIS section of man page
I forgot to update the usage() and SYNOPSIS section of man page when
adding the two options -J and -V.

While here, fix the options sort order in SYNOPSIS section.

Fixes:	5ec83c660aca sysctl: Add flags to filter jail prison and vnet variables
MFC after:	1 day

--- a/sbin/sysctl/sysctl.8
+++ b/sbin/sysctl/sysctl.8
@@ -28,7 +28,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 29, 2024
+.Dd January 23, 2025
 .Dt SYSCTL 8
 .Os
 .Sh NAME
@@ -36,13 +36,13 @@
 .Nd get or set kernel state
 .Sh SYNOPSIS
 .Nm
-.Op Fl bdeFhilNnoTtqWx
+.Op Fl bdeFhiJlNnoqTtVWx
 .Op Fl B Ar bufsize
 .Op Fl f Ar filename
 .Ar name Ns Op = Ns Ar value Ns Op , Ns Ar value
 .Ar ...
 .Nm
-.Op Fl bdeFhlNnoTtqWx
+.Op Fl bdeFhJlNnoqTtVWx
 .Op Fl B Ar bufsize
 .Fl a
 .Sh DESCRIPTION
