sysctl: Fix usage() and SYNOPSIS section of man page
I forgot to update the usage() and SYNOPSIS section of man page when
adding the two options -J and -V.

While here, fix the options sort order in SYNOPSIS section.

Fixes:	5ec83c660aca sysctl: Add flags to filter jail prison and vnet variables
MFC after:	1 day

(cherry picked from commit 0ee3e29e1d9ee3ed22441c0d580d2d1e57a1d9e3)
(cherry picked from commit 1d890d546b064f2c7753b949f5dbf00d79cde292)

--- a/sbin/sysctl/sysctl.8
+++ b/sbin/sysctl/sysctl.8
@@ -27,7 +27,7 @@
 .\"
 .\"	From: @(#)sysctl.8	8.1 (Berkeley) 6/6/93
 .\"
-.Dd October 29, 2024
+.Dd January 23, 2025
 .Dt SYSCTL 8
 .Os
 .Sh NAME
@@ -35,13 +35,13 @@
 .Nd get or set kernel state
 .Sh SYNOPSIS
 .Nm
-.Op Fl bdehiNnoTtqWx
+.Op Fl bdehiJNnoqTtVWx
 .Op Fl B Ar bufsize
 .Op Fl f Ar filename
 .Ar name Ns Op = Ns Ar value Ns Op , Ns Ar value
 .Ar ...
 .Nm
-.Op Fl bdehNnoTtqWx
+.Op Fl bdehJNnoqTtVWx
 .Op Fl B Ar bufsize
 .Fl a
 .Sh DESCRIPTION
