--- a/sbin/gvinum/gvinum.8
+++ b/sbin/gvinum/gvinum.8
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd March 28, 2021
+.Dd January 23, 2025
 .Dt GVINUM 8
 .Os
 .Sh NAME
@@ -36,7 +36,7 @@
 .Nm
 and associated
 .Xr geom 4
-kernel support is deprecated, and may not be available in
+kernel support is deprecated, and is not available in
 .Fx 15.0
 and later.
 Users are advised to migrate to
