ccdconfig.8: Refer to graid(8) and zfs(8) instead of gvinum(8)
Reviewed by:	imp, emaste
Differential Revision:	https://reviews.freebsd.org/D48536

--- a/sbin/ccdconfig/ccdconfig.8
+++ b/sbin/ccdconfig/ccdconfig.8
@@ -199,15 +199,16 @@ If you need
 more than this you should look into external hardware RAID SCSI boxes,
 RAID controllers (see GENERIC),
 or software RAID systems such as
-.Xr geom 8
-and
-.Xr gvinum 8 .
+.Xr graid 8
+or
+.Xr zfs 8 .
 .Sh SEE ALSO
 .Xr dd 1 ,
 .Xr ccd 4 ,
 .Xr gpart 8 ,
-.Xr gvinum 8 ,
-.Xr rc 8
+.Xr graid 8 ,
+.Xr rc 8 ,
+.Xr zfs 8
 .Sh HISTORY
 The
 .Nm
