--- a/share/man/man5/smbfs.5
+++ b/share/man/man5/smbfs.5
@@ -59,7 +59,7 @@ and
 may be removed from a future version of
 .Fx .
 Users are advised to evaluate the
-.Pa sysutils/fusefs-smbnetfs
+.Pa filesystems/smbnetfs
 port instead.
 .Ef
 .Sh SEE ALSO
