--- a/share/man/man7/mitigations.7
+++ b/share/man/man7/mitigations.7
@@ -28,7 +28,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 25, 2025
+.Dd January 29, 2025
 .Dt MITIGATIONS 7
 .Os
 .Sh NAME
@@ -244,8 +244,9 @@ and it is possible that some applications may not function correctly.
 .Fx
 supports stack overflow protection using the Stack Smashing Protector
 .Pq SSP
-compiler feature,
-and stack clash protection.
+compiler feature.
+Stack clash protection is also enabled,
+if supported by the compiler for the given architecture.
 In userland, SSP adds a per-process randomized canary at the end of every stack
 frame which is checked for corruption upon return from the function,
 and stack probing in
