--- a/share/man/man4/ffs.4
+++ b/share/man/man4/ffs.4
@@ -285,6 +285,10 @@ upon reallocating file system blocks to be contiguous.
 Enable support for the rearrangement of blocks
 to be contiguous.
 .Pq Default: 1 .
+.It Va vfs.ffs.prttimechgs
+Print a console message when timestamps for UFS1 filesystems are found
+to be in the future and are changed to be the present time.
+.Pq Default: 0 .
 .El
 .Sh HISTORY
 The
