pf.conf.5: make it clear that the default implicit 'pass' rule does not create state
make sense to deraadt@, ok/wording tweak from mikeb.

Obtained from:	OpenBSD, sthen <sthen@openbsd.org>, 610eb54470
Sponsored by:	Rubicon Communications, LLC ("Netgate")

--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -707,7 +707,7 @@ For each packet processed by the packet filter, the filter rules are
 evaluated in sequential order, from first to last.
 The last matching rule decides what action is taken.
 If no rule matches the packet, the default action is to pass
-the packet.
+the packet without creating a state.
 .Pp
 The following actions can be used in the filter:
 .Bl -tag -width xxxx
