build.7: document check-old-libs target
PR:		284546
MFC after:	3 days

--- a/share/man/man7/build.7
+++ b/share/man/man7/build.7
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 10, 2025
+.Dd February 3, 2025
 .Dt BUILD 7
 .Os
 .Sh NAME
@@ -449,6 +449,8 @@ include:
 .Bl -tag -width ".Cm delete-old-libs"
 .It Cm check-old
 Print a list of old files and directories in the system.
+.It Cm check-old-libs
+Print a list of obsolete base system libraries.
 .It Cm delete-old
 Delete obsolete base system files and directories interactively.
 When
