arch.7: "imagers" not "images"
Partially revert b7f2a457a883c8530c9b6111cee6a988ce5b7249 after
discission with bjk@ and imp@.

--- a/share/man/man7/arch.7
+++ b/share/man/man7/arch.7
@@ -352,7 +352,7 @@ userland interfaces relating to underlying hardware platform
 differences in bus architecture, device enumeration and boot interface.
 Generally,
 .Dv MACHINE
-should only be used in src/sys and src/stand or in system images or
+should only be used in src/sys and src/stand or in system imagers or
 installers.
 .It Dv MACHINE_ARCH
 Represents the CPU processor architecture.
