--- a/sbin/pfctl/pfctl.8
+++ b/sbin/pfctl/pfctl.8
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd February 5, 2025
+.Dd February 10, 2025
 .Dt PFCTL 8
 .Os
 .Sh NAME
@@ -104,9 +104,7 @@ to 1.
 Set them permanently in
 .Xr sysctl.conf 5 .
 .Pp
-The
-.Nm
-utility provides several commands.
+At least one option must be specified.
 The options are as follows:
 .Bl -tag -width Ds
 .It Fl A
