--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -27,7 +27,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd February 11, 2025
+.Dd February 13, 2025
 .Dt PF.CONF 5
 .Os
 .Sh NAME
@@ -132,8 +132,8 @@ Tables can also be used for the redirect address of
 .Ar nat
 and
 .Ar rdr
-rules and in the routing options of filter rules, but only for
-.Ar round-robin
+and in the routing options of filter rules, but not for
+.Ar bitmask
 pools.
 .Pp
 Tables can be defined with any of the following
@@ -2335,8 +2335,8 @@ The
 option loops through the redirection address(es).
 .Pp
 When more than one redirection address is specified,
-.Ar round-robin
-is the only permitted pool type.
+.Ar bitmask
+is not permitted as a pool type.
 .It Ar static-port
 With
 .Ar nat
