wifi manuals: Mlink + document description consistency
Interfaces all have an mlink to if_$foo. Add these for the missing ones
and remove an incorrect one from rtwn_pci. Wireless network drivers are
all accessible via `apropos -s4 "wireless network driver", except two
which are "wireless network device". I actually prefer the latter, but
make them all consistent upon the more common parlance. Tag SPDX on one
of the files I touched, while here.

MFC after:		3 days
Reviewed by:		bz, carlavilla, mhorne
Approved by:		carlavilla, mhorne (mentors)
Differential Revision:	https://reviews.freebsd.org/D49063

--- a/share/man/man4/upgt.4
+++ b/share/man/man4/upgt.4
@@ -54,7 +54,7 @@
 .Sh NAME
 .Nm upgt
 .Nd Conexant/Intersil PrismGT SoftMAC USB IEEE 802.11b/g wireless network
-device
+driver
 .Sh SYNOPSIS
 To compile this driver into the kernel,
 place the following lines in your
